--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/trello.svg" />
+    <link rel="icon" type="image" href="/src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trello</title>
+    <title>TLU Trello</title>
 
     <link
       rel="stylesheet"
